--- a/home.css
+++ b/home.css
@@ -160,13 +160,34 @@ form input, form select {
     margin-top: 3em;
 }
 
+.telegram > img {
+    height: 35px;
+    width: 35px;
+    padding-bottom: 0.2em;
+}
 
 
 .popup-content>h2{
     margin: 1.5em;
 }
 
-#history-popup {
+#custom-alert{
+    display: none;
+    position: fixed;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    height: 20%;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    padding: 2em;
+    text-align: center;
+}
+
+#history-popup{
     display: none;
     position: fixed;
     z-index: 2;
@@ -194,7 +215,7 @@ form input, form select {
     padding: 1em;
 }
 
-#history-ok {
+#history-ok ,#alert-ok{
     margin-top: 1em;
     padding: 0.6em 1em;
     background-color: rgb(14, 15, 17);
@@ -218,7 +239,7 @@ form input, form select {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: scroll;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
